test-suite/tests/ui/designated/no_parameter.stderr
error: expected a designated parameter
 --> tests/ui/designated/no_parameter.rs:4:5
  |
4 | pub struct Test;
  |     ^^^^^^

error: expected a designated parameter
 --> tests/ui/designated/no_parameter.rs:7:1
  |
7 | impl Test {}
  | ^^^^
